@@ -39,7 +39,7 @@ GALLERY_RESIZE_SCALED         0x720
 #GALLERY_RESIZE_BIG            2560x1440
 
 # Sidecar files with additional EXIF data
-GALLERY_EXIF_SIDECAR_POSTFIX  .xmp:.XMP
+GALLERY_SIDECAR_POSTFIX       .xmp:.XMP
 
 # Specify commands for html5 video conversion. These commands are
 # executed for all files matching GALLERY_VIDEO_MATCH. You can add
